# distr-py-jsonl-converter

./: README.md  pyproject.toml
src/csv4vertex/: converter.py  util.py
tests/: test_converter.py  test_util.py
